--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
         "vite": "^7.0.7"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/icons-material": "^7.3.7",
+        "@mui/material": "^7.3.7",
         "date-fns": "^4.1.0",
         "react": "^19.2.3",
         "react-dom": "^19.2.3",
